# forif-2025-mcp-study

./: .gitignore
docs/: week1.md
docs/week2/: README.md  draft.pptx  slides.key
docs/week2/examples/excercise/: main.py  pyproject.toml
docs/week2/examples/hello-multiligual/: main.py  pyproject.toml
docs/week2/examples/hello-world/: main.py  mcp.json  pyproject.toml
docs/week3/: draft.pptx  slides.key
docs/week4/: README.md  api-calls.yaml  main.py  map_api.ipynb  pyproject.toml
docs/week4/mcpserver/: main.py  utils.py
