[project]
name = "week4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.4",
    "ipykernel>=6.30.1",
    "lxml-html-clean>=0.4.2",
    "requests-html>=0.10.0",
]

[project.scripts]
map-mcp = "mcpserver.main:main"
